--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -40,30 +40,38 @@ xaringanExtra::use_search(show_icon = TRUE)
 ## TÓPICOS ABORDADOS
 
 
-[Quem é o professor?](#sobre_professor)
+[**Quem é o professor?**](#sobre_professor)
 
-[Qual o objetivo da disciplina?](#objetivo_disciplina)
 
-[Como as aulas serão organizadas durante o RTE?](#organizacao_aulas)
+[**Qual o objetivo da disciplina?**](#objetivo_disciplina)
 
-[Como os atendimentos serão organizados?](#atendimentos)
 
-[Qual o cronograma e quais os conteúdos da disciplina?](#cronograma)
+[**Como as aulas serão organizadas durante o RTE?**](#organizacao_aulas)
 
-[Qual o cronograma das avaliações?](#avaliacoes)
 
+[**Como os atendimentos serão organizados?**](#atendimentos)
+
+
+[**Qual o cronograma e quais os conteúdos da disciplina?**](#cronograma)
+
+
+[**Qual o cronograma das avaliações?**](#avaliacoes)
 
 
 ---
 class: inverse, center, middle 
 name: sobre_professor
 
+
 ## QUEM É O PROFESSOR?
+
 
 ---
 <div style="text-align: justify">
 
+
 ## PRINCIPAIS INFORMAÇÕES
+
 
 - **Nome:** Victor Valerio;
 
@@ -71,7 +79,9 @@ name: sobre_professor
 
 - **Grupo wpp:** [**clique aqui para ingressar**](https://chat.whatsapp.com/K0ikt0cd8v8ATr28IQAYTk).
 
+
 ## FORMAÇÃO
+
 
 - **GRADUAÇÃO**: Ciências Econômicas (UNESP);
 
@@ -79,35 +89,42 @@ name: sobre_professor
 
 - **DOUTORADO**: Engenharia de Produção (UNIFEI)
 
+
 ---
-class: inverse
 <div style="text-align: justify">
 
+
 ## ÁREAS DE ATUAÇÃO
+
 
 - **DOCÊNCIA**: Economia (ECN001), Engenharia Econômica (EPR502), 	Macroeconomia (ADM03F), 
 Matemática Financeira (ADM020), Análise 	de 	Investimento com Risco (ADM013);
 
+
 </br>
+
 
 - **PESQUISA**: Análise de Eficiência e Produtividade do Mercado de 	Crédito Nacional, Análise de 
 Eficiência e Produtividade de Projetos de 	Energia 	Renovável, Viabilidade Econômica de Projetos 
 de Energia 	Renovável, Ciência de Dados;
 
+
 </br>
+
 
 - **EXTENSÃO**: Coleta Seletiva na Cidade de Itajubá; Projetos de 	Energia 	Fotovoltaica para as 
 Universidades Públicas.
 
+
 ---
-class: center, middle 
+class: inverse, center, middle 
 name: objetivo_disciplina
 
 
 ## QUAL O OBJETIVO DA DISCIPLINA?
 
+
 ---
-class: inverse
 <div style="text-align: justify">
 
 ## QUAL O OBJETIVO DA DISCIPLINA?
@@ -132,7 +149,7 @@ knitr::include_graphics('https://media.giphy.com/media/BY8ORoRpnJDXeBNwxg/giphy.
 
 
 ---
-class: center, middle 
+class: inverse, center, middle
 name: organizacao_aulas
 
 
@@ -183,7 +200,7 @@ cronograma, ou para que a gente possa conversar assuntos gerais também (estas r
 sábados)**.
 
 ---
-class: center, middle 
+class: inverse, center, middle
 name: atendimentos
 
 ## COMO OS ATENDIMENTOS SERÃO ORGANIZADOS?
@@ -222,7 +239,7 @@ Por favor, ingresse no grupo! Basta clicar neste
 [**link**](https://chat.whatsapp.com/K0ikt0cd8v8ATr28IQAYTk)! Obviamente, sua entrada é facultativa!
 
 ---
-class: center, middle 
+class: inverse, center, middle
 name: cronograma
 
 ## QUAL O CRONOGRAMA E QUAIS OS CONTEÚDOS DA DISCIPLINA?
@@ -348,7 +365,7 @@ knitr::kable(cronograma,
 
 
 ---
-class: center, middle 
+class: inverse, center, middle
 name: avaliacoes
 
 ## QUAL O CRONOGRAMA DAS AVALIAÇÕES?
