--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -127,12 +127,17 @@ name: objetivo_disciplina
 ---
 <div style="text-align: justify">
 
+
 ## QUAL O OBJETIVO DA DISCIPLINA?
 
 
-O objetivo geral da disciplina de Macroeconomia consiste em introduzir as principais **formulações 
+</br>
+
+
+- O objetivo geral da disciplina de Macroeconomia consiste em introduzir as principais **formulações 
 teóricas** necessárias ao entendimendo do **funcionamento da economia de um país** ressaltando, sempre 
 que possível, as **associações práticas** possíveis para o nível de aprofundamento alcançado.
+
 
 ---
 class: center, middle
@@ -155,98 +160,122 @@ name: organizacao_aulas
 
 ## COMO AS AULAS SERÃO ORGANIZADAS?
 
+
 ---
-class: inverse
 <div style="text-align: justify">
+
 
 ## COMO AS AULAS SERÃO ORGANIZADAS?
 
 
-**As aulas serão estritamente expositivas a partir de reuniões no google meet (às quartas-feiras no horário da nossa aula)**;
+- **As aulas serão estritamente expositivas a partir de reuniões no google meet (às quartas-feiras no horário da nossa aula)**;
+
 
 </br>
 
-Todas elas serão gravadas para posterior envio aos estudantes com dificuldade de acesso à internet;
+
+- Todas elas serão gravadas para posterior envio aos estudantes com dificuldade de acesso à internet;
+
 
 </br>
 
-Não é o ideal pois existem formatos mais dinâmicos de aula, em que de atividades são conduzidas pelos 
+
+- Não é o ideal pois existem formatos mais dinâmicos de aula, em que de atividades são conduzidas pelos 
 estudantes, então, responsáveis pela própria formação. Este conceito de “sala de aula invertida” tem
-o potencial de aumentar o desenvolvimento de competências relacionadas a disciplina. Mas durante o RTE este formato
-não é democrático!
+o potencial de aumentar o desenvolvimento de competências relacionadas a disciplina. Mas durante o 
+RTE este formato não é democrático!
 
 
 ---
-class: inverse
 <div style="text-align: justify">
+
 
 ## COMO AS AULAS SERÃO ORGANIZADAS?
 
-Os vídeos gravados em cada reunião serão inseridos nos capítulos da apostila da disciplina, em seus 
+
+- Os vídeos gravados em cada reunião serão inseridos nos capítulos da apostila da disciplina, em seus 
 respectivos tópicos, de acordo com os conteúdos referentes a cada semana do cronograma da disciplina;
 
+
 </br>
 
-Além dos vídeos, a apostila também conterá as seguintes informações:
 
-- **Objetivo da aula**;
+- Além dos vídeos, a apostila também conterá as seguintes informações:
 
-- **Breve exposição sobre os principais conceitos trabalhados na aula**;
+  - **Objetivo da aula**;
 
-- **Slide da aula (o mesmo utilizado na reunião)**;
+  - **Breve exposição sobre os principais conceitos trabalhados na aula**;
+
+  - **Slide da aula (o mesmo utilizado na reunião)**;
+
+
+</br>
+
 
 - **Reuniões pré-agendadas no google meet para tirar possíveis dúvidas sobre os conteúdos, ou sobre o 
 cronograma, ou para que a gente possa conversar assuntos gerais também (estas reuniões ocorrerão aos 
 sábados)**.
 
+
 ---
 class: inverse, center, middle
 name: atendimentos
 
+
 ## COMO OS ATENDIMENTOS SERÃO ORGANIZADOS?
 
 
 ---
-class: inverse
 <div style="text-align: justify">
+
 
 ## COMO OS ATENDIMENTOS SERÃO ORGANIZADOS?
 
-Realizaremos encontros semanais (aos sábados) já previamente agendados em cada um 
+
+- Realizaremos encontros semanais (aos sábados) já previamente agendados em cada um 
 dos capítulos da apostila. Todos estes encontros serão realizados a partir da plataforma **google meet**
 e os links também serão disponibilizados em cada capítulo;
 
+
 </br>
 
-As reuniões iniciarão aos sábados às 10:10h (conforme nossas aulas). Cumpre ressaltar que eu estarei 
+
+- As reuniões iniciarão aos sábados às 10:10h (conforme nossas aulas). Cumpre ressaltar que eu estarei 
 disponível até o fim da aula (11:05h) desde que haja interação, isto é, se em um prazo de 15 minutos 
 ninguém entrar na reunião para interação, ela será automaticamente cancelada.
 
+
 ---
-class: inverse
 <div style="text-align: justify">
+
 
 ## COMO OS ATENDIMENTOS SERÃO ORGANIZADOS?
 
-Cada estudante poderá solicitar reuniões particulares, basta enviar um e-mail para o endereço 
+
+- Cada estudante poderá solicitar reuniões particulares, basta enviar um e-mail para o endereço 
 [**victor.dmv@unifei.edu.br**](victor.dmv@unifei.edu.br). 
 Mas acrescento, justificativas para a reunião particular deve ser adicionada no corpo do e-mail;
 
+
 </br>
 
-Há ainda mais um instrumento de interação, criei um grupo no whatsapp (acho o mais dinâmico de todos). 
+
+- Há ainda mais um instrumento de interação, criei um grupo no whatsapp (acho o mais dinâmico de todos). 
 Por favor, ingresse no grupo! Basta clicar neste 
 [**link**](https://chat.whatsapp.com/K0ikt0cd8v8ATr28IQAYTk)! Obviamente, sua entrada é facultativa!
+
 
 ---
 class: inverse, center, middle
 name: cronograma
 
+
 ## QUAL O CRONOGRAMA E QUAIS OS CONTEÚDOS DA DISCIPLINA?
 
+
 ---
-class: inverse
 <div style="text-align: justify">
+
 
 ## QUAL O CRONOGRAMA E QUAIS OS CONTEÚDOS DA DISCIPLINA?
 
@@ -305,8 +334,8 @@ knitr::kable(cronograma,
 
 
 ---
-class: inverse
 <div style="text-align: justify">
+
 
 ## QUAL O CRONOGRAMA E QUAIS OS CONTEÚDOS DA DISCIPLINA?
 
@@ -368,14 +397,16 @@ knitr::kable(cronograma,
 class: inverse, center, middle
 name: avaliacoes
 
+
 ## QUAL O CRONOGRAMA DAS AVALIAÇÕES?
 
 
 ---
-class: inverse
 <div style="text-align: justify">
 
+
 ## QUAL O CRONOGRAMA DAS AVALIAÇÕES?
+
 
 ```{r , results = 'asis', echo = F, warning = F, message = F, error = F, fig.align ='center', out.width = '100%'}
 
@@ -412,29 +443,30 @@ knitr::kable(cronograma,
 
 ```
 
+
 ---
-class: inverse
 <div style="text-align: justify">
+
 
 ## QUAL A COMPOSIÇÃO DAS NOTAS?
 
 
+</br>
 
 
-Equação Nota 1: $Nota_1  = 0,8 Prova_{parte 1} + 0,2 Questionários_{parte 1}$
+- Equação Nota 1: $Nota_1  = 0,8 Prova_{parte 1} + 0,2 Questionários_{parte 1}$
 
 
 </br>
 
 
-Equação Nota 2: $Nota_2  = 0,8 Prova_{parte 2} + 0,2 Questionários_{parte 2}$
+- Equação Nota 2: $Nota_2  = 0,8 Prova_{parte 2} + 0,2 Questionários_{parte 2}$
 
 
 </br>
 
 
-Equação Nota Final: $Nota_{Final}  = (Nota_1 + Nota_2)/2$
-
+- Equação Nota Final: $Nota_{Final}  = (Nota_1 + Nota_2)/2$
 
 
 ---
