--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -5,22 +5,39 @@ author: 'Autor: Victor Valerio'
 date: 'Última atualização: `r format(Sys.Date(),"%d-%m-%Y")`'
 output:
   xaringan::moon_reader:
-    css: ['default', 'meutema.css']
+    lib_dir: libs
+    css: xaringan-themer.css
     nature:
       highlightStyle: github
       highlightLines: true
+      countIncrementalSlides: false
       ratio: 16:9
-      countIncrementalSlides: true
 ---
 
 ```{r xaringan-themer, include=FALSE, warning=FALSE}
+# PACOTES UTILIZADOS: ----
 library(xaringanthemer)
-style_mono_light(base_color = '#23395b')
-```
+library(xaringanExtra)
 
-```{r xaringan-scribble, echo=FALSE}
-xaringanExtra::use_scribble()
-xaringanExtra::use_search(show_icon = TRUE)
+# CONFIGURAÇÃO DA FONTE: ----
+style_mono_light(base_color = '#23395b',
+                  text_font_size = '30px',
+                  header_h1_font_size = '3rem',
+                  header_h2_font_size = '2rem',
+                  header_h3_font_size = '1.5rem')
+
+# CONFIGURAÇÃO PADRÃO CHUNK: ----
+knitr::opts_chunk$set(echo = F,
+                      results = 'asis', 
+                      warning = F, 
+                      message = F, 
+                      error = F, 
+                      fig.align = 'center', 
+                      out.width = '100%')
+
+# RECURSOS DO SLIDE: ----
+use_scribble()
+use_search(show_icon = TRUE)
 ```
 
 class: inverse, center, middle
@@ -61,8 +78,6 @@ knitr::include_graphics(
 - **E-mail:** *victor.dmv@unifei.edu.br*;
 - **Tel:** *+55 (35) 3629-1151*
 - **Sala:** *B.3216 (1º Piso IEPG);*
-- **Grupo de WhatsApp:** 
-[_INGRESSE NO GRUPO CLICANDO AQUI_](https://chat.whatsapp.com/K0ikt0cd8v8ATr28IQAYTk)
 
 ---
 <div style="text-align: justify">
@@ -78,16 +93,17 @@ knitr::include_graphics(
 <div style="text-align: justify">
 ## ÁREAS DE ATUAÇÃO
 
-- **DOCÊNCIA**: Economia (IEPG20), Engenharia Econômica (EPR502), 	
+- **DOCÊNCIA**: Economia (IEPG20), Engenharia Econômica (IEPG10), 	
 Macroeconomia (ADM022), Análise 	de 	Investimento com Risco (ADM013), 
 Metodologia Quantitativa em Administração (MPA033);
 
-- **PESQUISA**: Modelos de Análise de Eficiência e Produtividade, Análise de 
-Viabilidade Econômica, Energia 	Renovável, Ciência de Dados;
+- **PESQUISA**: Eficiência e Produtividade, Engenharia Econômica, 
+Energia Renovável, Ciência de Dados;
 
 - **INSTITUCIONAL**: Representante do Estado de Minas Gerais na Ordem dos Economistas do 
 Brasil (OEB); Coordenador do Núcleo de Excelência em 	Sistemas Fotovoltaicos 
-(NE-SFV); Pesquisador Assistente no Centro de 	Hidrogênio Verde (CHV2); 
+(NE-SFV); Pesquisador Assistente no Centro de 	Hidrogênio Verde (CHV2); Coordenador
+da Rede - Impacto GDMG, Pesquisador Rede Biocombustíveis de Aviação;
 Coordenador de Graduação de Curso (Administração-UNIFEI).
 
 ---
@@ -122,8 +138,7 @@ knitr::include_graphics(
 
 - Qual o seu nome?
 - Qual área de atuação profissional te interessa?
-- Você se matricularia se não fosse obrigatória?
-- Qual seu hobby? (esporte, filmes/séries, dormir, dançar, fofocar...)
+- O que faz no tempo livre? (esporte, filmes/séries, dormir, dançar, fofocar...)
 - Qual seu signo?
 - Conte uma curiosidade sobre você.
 - Conte uma mentira sobre você.
@@ -175,6 +190,9 @@ knitr::include_graphics(
     - Realização da “chamada”;
 
     - Início das exposições teóricas (início da aula).
+    
+- **Dica**: Crie um dicionário de conceitos e comece a companhar notícias de 
+economia.
 
 ---
 <div style="text-align: justify">
@@ -186,7 +204,7 @@ knitr::include_graphics(
 
   - **Breve exposição sobre os principais conceitos trabalhados na aula**;
 
-  - **Slide da aula (o mesmo utilizado na reunião)**.
+  - **Slide da aula (o mesmo utilizado em sala)**.
 
 ---
 class: inverse, center, middle
@@ -212,7 +230,7 @@ knitr::include_graphics(
 
     - Para atendimento pessoal basta utilizar o seguinte link: 
     
-    - [**https://valerio-victor.github.io/agenda**](https://valerio-victor.github.io/agenda)
+    - [**https://profvictorunifei.shinyapps.io/agenda/**](https://profvictorunifei.shinyapps.io/agenda/)
     
     - O agendamento deverá ocorrer com 4 dias de antecedência, não é necessário solicitar e não é necessário avisar.
 
@@ -228,6 +246,16 @@ Por favor, ingresse no grupo! Basta clicar neste
 ```{r, echo = F, fig.align = 'center', out.width = '50%'}
 knitr::include_graphics(
   'https://media.giphy.com/media/l2JebaQTHOUAIarQc/giphy.gif')
+```
+
+
+---
+<div style="text-align: justify">
+## GRUPO DE WHATSAPP
+
+```{r, echo = F, fig.align = 'center', out.width = '50%'}
+knitr::include_graphics(
+  'agenda_wpp.jpg')
 ```
 
 ---
@@ -247,9 +275,18 @@ library(magrittr)
 library(kableExtra)
 
 cronograma <- data.frame(
-  AULA = c(1, 2, 3, 4, 5, 6, 7, 8),
-  DIA = c('17/03', '24/03', '31/03', '14/04', '28/04', '05/05', '19/05', '26/05'),
+  AULA = c(1, 2, 3, 4, 5, 6, 7, 8, 9),
+  DIA = c(format(Sys.Date(),"%d-%m-%Y"),
+          format(Sys.Date()+(7*1),"%d-%m-%Y"),
+          format(Sys.Date()+(7*2),"%d-%m-%Y"),
+          format(Sys.Date()+(7*4),"%d-%m-%Y"),
+          format(Sys.Date()+(7*5),"%d-%m-%Y"),
+          format(Sys.Date()+(7*6),"%d-%m-%Y"),
+          format(Sys.Date()+(7*7),"%d-%m-%Y"),
+          format(Sys.Date()+(7*8),"%d-%m-%Y"),
+          format(Sys.Date()+(7*9),"%d-%m-%Y")),
   TEMAS = c('Apresentação da Disciplina',
+            'Mercados Macroeconômicos',
            'Taxa de Inflação - Conceitos', 
            'Taxa de Inflação - Estudo de Caso', 
            'Taxa de Câmbio - Conceitos',
@@ -274,15 +311,21 @@ library(magrittr)
 library(kableExtra)
 
 cronograma <- data.frame(
-  AULA = c(9, 10, 11, 12, 13, 14, 15),
-  DIA = c('02/06', '16/06', '23/06', '30/06', '07/07', '14/07', '21/07'),
+  AULA = c(10, 11, 12, 13, 14, 15, 16),
+  DIA = c(format(Sys.Date()+(7*10),"%d-%m-%Y"),
+          format(Sys.Date()+(7*11),"%d-%m-%Y"),
+          format(Sys.Date()+(7*12),"%d-%m-%Y"),
+          format(Sys.Date()+(7*13),"%d-%m-%Y"),
+          format(Sys.Date()+(7*14),"%d-%m-%Y"),
+          format(Sys.Date()+(7*15),"%d-%m-%Y"),
+          format(Sys.Date()+(7*16),"%d-%m-%Y")),
   TEMAS = c('Identidades Macroeconômicas', 
            'Fluxo Circular da Renda', 
            'Agregados Macroeconômicos - Conceitos',
            'Agregados Macroeconômicos - Estudo de Caso', 
-           'Nível de Atividade',
-           'Mercado de Trabalho', 
-           'Prova 02'))
+           'Mercado de Trabalho - Conceitos',
+           'Prova 02',
+           'Prova Substitutiva'))
 
 knitr::kable(cronograma, 
              escape = FALSE,
