--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -274,17 +274,19 @@ knitr::include_graphics(
 library(magrittr)
 library(kableExtra)
 
+primeiro_dia <- lubridate::ymd('2024-03-15')
+
 cronograma <- data.frame(
   AULA = c(1, 2, 3, 4, 5, 6, 7, 8, 9),
-  DIA = c(format(Sys.Date(),"%d-%m-%Y"),
-          format(Sys.Date()+(7*1),"%d-%m-%Y"),
-          format(Sys.Date()+(7*2),"%d-%m-%Y"),
-          format(Sys.Date()+(7*4),"%d-%m-%Y"),
-          format(Sys.Date()+(7*5),"%d-%m-%Y"),
-          format(Sys.Date()+(7*6),"%d-%m-%Y"),
-          format(Sys.Date()+(7*7),"%d-%m-%Y"),
-          format(Sys.Date()+(7*8),"%d-%m-%Y"),
-          format(Sys.Date()+(7*9),"%d-%m-%Y")),
+  DIA = c(format(primeiro_dia,"%d-%m-%Y"),
+          format(primeiro_dia+(7*1),"%d-%m-%Y"),
+          format(primeiro_dia+(7*3),"%d-%m-%Y"),
+          format(primeiro_dia+(7*4),"%d-%m-%Y"),
+          format(primeiro_dia+(7*5),"%d-%m-%Y"),
+          format(primeiro_dia+(7*6),"%d-%m-%Y"),
+          format(primeiro_dia+(7*7),"%d-%m-%Y"),
+          format(primeiro_dia+(7*8),"%d-%m-%Y"),
+          format(primeiro_dia+(7*9),"%d-%m-%Y")),
   TEMAS = c('Apresentação da Disciplina',
             'Mercados Macroeconômicos',
            'Taxa de Inflação - Conceitos', 
@@ -312,13 +314,13 @@ library(kableExtra)
 
 cronograma <- data.frame(
   AULA = c(10, 11, 12, 13, 14, 15, 16),
-  DIA = c(format(Sys.Date()+(7*10),"%d-%m-%Y"),
-          format(Sys.Date()+(7*11),"%d-%m-%Y"),
-          format(Sys.Date()+(7*12),"%d-%m-%Y"),
-          format(Sys.Date()+(7*13),"%d-%m-%Y"),
-          format(Sys.Date()+(7*14),"%d-%m-%Y"),
-          format(Sys.Date()+(7*15),"%d-%m-%Y"),
-          format(Sys.Date()+(7*16),"%d-%m-%Y")),
+  DIA = c(format(primeiro_dia+(7*10),"%d-%m-%Y"),
+          format(primeiro_dia+(7*11),"%d-%m-%Y"),
+          format(primeiro_dia+(7*12),"%d-%m-%Y"),
+          format(primeiro_dia+(7*13),"%d-%m-%Y"),
+          format(primeiro_dia+(7*14),"%d-%m-%Y"),
+          format(primeiro_dia+(7*15),"%d-%m-%Y"),
+          format(primeiro_dia+(7*16),"%d-%m-%Y")),
   TEMAS = c('Identidades Macroeconômicas', 
            'Fluxo Circular da Renda', 
            'Agregados Macroeconômicos - Conceitos',
